# cdfmc-api-scripts

fmc-ha-status-monitor/: README.md  pyproject.toml
fmc-ha-status-monitor/fmc_ha_status_monitor/: main.py
